--- a/Prevu.Drawings/Machines/Stirrer/STR_PrewashReactorB.xaml
+++ b/Prevu.Drawings/Machines/Stirrer/STR_PrewashReactorB.xaml
@@ -3,62 +3,70 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:Prevu.Drawings.Machines.Stirrer"
-             mc:Ignorable="d" 
-             >
-    <Viewbox Stretch="Uniform">
-        <Canvas Name="svg82" Width="113" Height="119">
-            <Canvas.RenderTransform>
-                <TranslateTransform X="0" Y="0"/>
-            </Canvas.RenderTransform>
-            <Canvas.Resources>
-                <RectangleGeometry  x:Key="clip0_1213_38" Rect="0, 0, 113, 119"/>
-            </Canvas.Resources>
-            <!--Unknown tag: sodipodi:namedview-->
-            <Canvas Name="g24" Clip="{StaticResource clip0_1213_38}">
-                <Path Name="path2" Fill="#FF808080">
-                    <Path.Data>
-                        <PathGeometry Figures="M107.75 4.55756H75.0183V35.5669L109.007 22.2488C110.327 21.7315 111.196 20.4585 111.196 19.0407V8.00304C111.196 6.10015 109.653 4.55756 107.75 4.55756Z" FillRule="NonZero"/>
-                    </Path.Data>
-                </Path>
-                <Rectangle  Canvas.Left="3" Canvas.Top="5" Width="86" Height="112" RadiusX="5.16823" RadiusY="5.16823" Name="rect4" Fill="#FF808080"/>
-                <Canvas Name="g8" Effect="{StaticResource MaterialDesignElevationShadow1}">
-                    <Path Name="path6" StrokeThickness="3.44549" Stroke="#FF808080" StrokeStartLineCap="Round" StrokeEndLineCap="Round">
-                        <Path.Data>
-                            <PathGeometry Figures="M18 6C13.6542 6 9.49209 6.02491 9.21201 6.02662C9.20131 6.02668 9.19144 6.02671 9.18075 6.02672C5.12023 6.03201 3 8.01803 3 10.5V112.5C3 114.985 6.3003 117 10.3714 117H81.6286C85.6997 117 89 114.985 89 112.5V10.5C89 8.01472 85.6997 6 81.6286 6H74" FillRule="NonZero"/>
-                        </Path.Data>
-                    </Path>
-                </Canvas>
-                <Path  Name="path10" Fill="#FF292929">
-                    <Path.Data>
-                        <PathGeometry Figures="M99.6282 7.07163C99.6282 6.56163 100.042 6.14819 100.552 6.14819C101.062 6.14819 101.475 6.56163 101.475 7.07163V9.93429C102.065 10.054 102.613 10.2859 103.098 10.6069L105.122 8.58242C105.483 8.2218 106.068 8.2218 106.428 8.58242C106.789 8.94305 106.789 9.52773 106.428 9.88836L104.404 11.9129C104.725 12.3975 104.957 12.9462 105.076 13.5357H107.939C108.449 13.5357 108.863 13.9491 108.863 14.4591C108.863 14.9691 108.449 15.3825 107.939 15.3825H105.076C104.957 15.972 104.725 16.5208 104.404 17.0054L106.428 19.0299C106.789 19.3905 106.789 19.9752 106.428 20.3358C106.068 20.6964 105.483 20.6964 105.122 20.3358L103.098 18.3113C102.613 18.6323 102.065 18.8643 101.475 18.9839V21.8466C101.475 22.3566 101.062 22.77 100.552 22.77C100.042 22.77 99.6282 22.3566 99.6282 21.8466V18.9839C99.0387 18.8643 98.49 18.6323 98.0053 18.3113L95.9809 20.3358C95.6202 20.6964 95.0356 20.6964 94.6749 20.3358C94.3143 19.9752 94.3143 19.3905 94.6749 19.0298L96.6994 17.0054C96.3784 16.5207 96.1465 15.972 96.0268 15.3825H93.1642C92.6542 15.3825 92.2407 14.9691 92.2407 14.4591C92.2407 13.9491 92.6542 13.5357 93.1642 13.5357H96.0268C96.1465 12.9462 96.3785 12.3974 96.6994 11.9128L94.675 9.88833C94.3143 9.52771 94.3143 8.94302 94.675 8.5824C95.0356 8.22177 95.6203 8.22177 95.9809 8.5824L98.0054 10.6069C98.49 10.2859 99.0387 10.054 99.6282 9.93429V7.07163Z" FillRule="NonZero"/>
-                    </Path.Data>
-                </Path>
-                <Canvas Name="g14" Effect="{StaticResource MaterialDesignElevationShadow1}">
-                    <Path Name="path12" Fill="#FF292929">
-                        <Path.Data>
-                            <PathGeometry Figures="M30 1.5C30 0.671572 30.6716 0 31.5 0V0C32.3284 0 33 0.671573 33 1.5V77.5389C33 77.8695 32.8907 78.1909 32.6892 78.4531V78.4531C32.0888 79.2341 30.9112 79.2341 30.3108 78.4531V78.4531C30.1093 78.1909 30 77.8695 30 77.5389L30 1.5Z" FillRule="NonZero"/>
-                        </Path.Data>
-                    </Path>
-                </Canvas>
-                <Path Name="path16" StrokeThickness="2" Stroke="#FF292929">
-                    <Path.Data>
-                        <PathGeometry Figures="M21 23L42.5151 29.8989C42.9783 30.0474 42.9783 30.7026 42.5151 30.8511L22.4849 37.2739C22.0217 37.4224 22.0217 38.0776 22.4849 38.2261L42.5151 44.6489C42.9782 44.7974 42.9782 45.4526 42.5151 45.6011L22.4849 52.0239C22.0217 52.1724 22.0217 52.8276 22.4849 52.9761L42.5151 59.3989C42.9783 59.5474 42.9783 60.2026 42.5151 60.3511L22.4849 66.7739C22.0217 66.9224 22.0217 67.5776 22.4849 67.7261L42.5151 74.1489C42.9783 74.2974 42.9783 74.9526 42.5151 75.1011L21 82" FillRule="NonZero"/>
-                    </Path.Data>
-                </Path>
-                <Canvas Name="g20" Effect="{StaticResource MaterialDesignElevationShadow1}">
-                    <Path Name="path18" Fill="#FF292929">
-                        <Path.Data>
-                            <PathGeometry Figures="M58 1.5C58 0.671572 58.6716 0 59.5 0V0C60.3284 0 61 0.671573 61 1.5V77.5389C61 77.8695 60.8907 78.1909 60.6892 78.4531V78.4531C60.0888 79.2341 58.9112 79.2341 58.3108 78.4531V78.4531C58.1093 78.1909 58 77.8695 58 77.5389L58 1.5Z" FillRule="NonZero"/>
-                        </Path.Data>
-                    </Path>
-                </Canvas>
-                <Path Name="path22" StrokeThickness="2" Stroke="#FF292929">
-                    <Path.Data>
-                        <PathGeometry Figures="M48 23L69.5151 29.8989C69.9783 30.0474 69.9783 30.7026 69.5151 30.8511L49.4849 37.2739C49.0217 37.4224 49.0217 38.0776 49.4849 38.2261L69.5151 44.6489C69.9782 44.7974 69.9782 45.4526 69.5151 45.6011L49.4849 52.0239C49.0217 52.1724 49.0217 52.8276 49.4849 52.9761L69.5151 59.3989C69.9783 59.5474 69.9783 60.2026 69.5151 60.3511L49.4849 66.7739C49.0217 66.9224 49.0217 67.5776 49.4849 67.7261L69.5151 74.1489C69.9783 74.2974 69.9783 74.9526 69.5151 75.1011L48 82" FillRule="NonZero"/>
-                    </Path.Data>
-                </Path>
-            </Canvas>
+             xmlns:local="clr-namespace:Prevu.Drawings.Machines.Stirrer" IsHitTestVisible="False"
+             xmlns:Labels="clr-namespace:Prevu.UIComponents.Labels;assembly=Prevu.UIComponents"
+             mc:Ignorable="d" >
+  <Viewbox Stretch="Uniform">
+    <Canvas Name="svg82" Width="113" Height="119">
+      <Canvas.RenderTransform>
+        <TranslateTransform X="0" Y="0"/>
+      </Canvas.RenderTransform>
+      <Canvas.Resources>
+        <RectangleGeometry  x:Key="clip0_1213_38" Rect="0, 0, 113, 119"/>
+      </Canvas.Resources>
+      <!--Unknown tag: sodipodi:namedview-->
+      <Canvas Name="g24" Clip="{StaticResource clip0_1213_38}">
+        <Path Name="path2" Fill="#FF808080">
+          <Path.Data>
+            <PathGeometry Figures="M107.75 4.55756H75.0183V35.5669L109.007 22.2488C110.327 21.7315 111.196 20.4585 111.196 19.0407V8.00304C111.196 6.10015 109.653 4.55756 107.75 4.55756Z" FillRule="NonZero"/>
+          </Path.Data>
+        </Path>
+        <Rectangle  Canvas.Left="3" Canvas.Top="5" Width="86" Height="112" 
+                    RadiusX="5.16823" RadiusY="5.16823" Name="rect4" Fill="#FF808080"/>
+        <Path  Name="path10" Fill="#FF292929">
+          <Path.Data>
+            <PathGeometry Figures="M99.6282 7.07163C99.6282 6.56163 100.042 6.14819 100.552 6.14819C101.062 6.14819 101.475 6.56163 101.475 7.07163V9.93429C102.065 10.054 102.613 10.2859 103.098 10.6069L105.122 8.58242C105.483 8.2218 106.068 8.2218 106.428 8.58242C106.789 8.94305 106.789 9.52773 106.428 9.88836L104.404 11.9129C104.725 12.3975 104.957 12.9462 105.076 13.5357H107.939C108.449 13.5357 108.863 13.9491 108.863 14.4591C108.863 14.9691 108.449 15.3825 107.939 15.3825H105.076C104.957 15.972 104.725 16.5208 104.404 17.0054L106.428 19.0299C106.789 19.3905 106.789 19.9752 106.428 20.3358C106.068 20.6964 105.483 20.6964 105.122 20.3358L103.098 18.3113C102.613 18.6323 102.065 18.8643 101.475 18.9839V21.8466C101.475 22.3566 101.062 22.77 100.552 22.77C100.042 22.77 99.6282 22.3566 99.6282 21.8466V18.9839C99.0387 18.8643 98.49 18.6323 98.0053 18.3113L95.9809 20.3358C95.6202 20.6964 95.0356 20.6964 94.6749 20.3358C94.3143 19.9752 94.3143 19.3905 94.6749 19.0298L96.6994 17.0054C96.3784 16.5207 96.1465 15.972 96.0268 15.3825H93.1642C92.6542 15.3825 92.2407 14.9691 92.2407 14.4591C92.2407 13.9491 92.6542 13.5357 93.1642 13.5357H96.0268C96.1465 12.9462 96.3785 12.3974 96.6994 11.9128L94.675 9.88833C94.3143 9.52771 94.3143 8.94302 94.675 8.5824C95.0356 8.22177 95.6203 8.22177 95.9809 8.5824L98.0054 10.6069C98.49 10.2859 99.0387 10.054 99.6282 9.93429V7.07163Z" FillRule="NonZero"/>
+          </Path.Data>
+        </Path>
+        <Canvas Name="g14" Effect="{StaticResource MaterialDesignElevationShadow1}">
+          <Path Name="path12" Fill="#FF292929">
+            <Path.Data>
+              <PathGeometry Figures="M30 1.5C30 0.671572 30.6716 0 31.5 0V0C32.3284 0 33 0.671573 33 1.5V77.5389C33 77.8695 32.8907 78.1909 32.6892 78.4531V78.4531C32.0888 79.2341 30.9112 79.2341 30.3108 78.4531V78.4531C30.1093 78.1909 30 77.8695 30 77.5389L30 1.5Z" FillRule="NonZero"/>
+            </Path.Data>
+          </Path>
         </Canvas>
-    </Viewbox>
+        <Path Name="path16" StrokeThickness="2" Stroke="#FF292929">
+          <Path.Data>
+            <PathGeometry Figures="M21 23L42.5151 29.8989C42.9783 30.0474 42.9783 30.7026 42.5151 30.8511L22.4849 37.2739C22.0217 37.4224 22.0217 38.0776 22.4849 38.2261L42.5151 44.6489C42.9782 44.7974 42.9782 45.4526 42.5151 45.6011L22.4849 52.0239C22.0217 52.1724 22.0217 52.8276 22.4849 52.9761L42.5151 59.3989C42.9783 59.5474 42.9783 60.2026 42.5151 60.3511L22.4849 66.7739C22.0217 66.9224 22.0217 67.5776 22.4849 67.7261L42.5151 74.1489C42.9783 74.2974 42.9783 74.9526 42.5151 75.1011L21 82" FillRule="NonZero"/>
+          </Path.Data>
+        </Path>
+        <Canvas Name="g20" Effect="{StaticResource MaterialDesignElevationShadow1}">
+          <Path Name="path18" Fill="#FF292929">
+            <Path.Data>
+              <PathGeometry Figures="M58 1.5C58 0.671572 58.6716 0 59.5 0V0C60.3284 0 61 0.671573 61 1.5V77.5389C61 77.8695 60.8907 78.1909 60.6892 78.4531V78.4531C60.0888 79.2341 58.9112 79.2341 58.3108 78.4531V78.4531C58.1093 78.1909 58 77.8695 58 77.5389L58 1.5Z" FillRule="NonZero"/>
+            </Path.Data>
+          </Path>
+        </Canvas>
+        <Path Name="path22" StrokeThickness="2" Stroke="#FF292929">
+          <Path.Data>
+            <PathGeometry Figures="M48 23L69.5151 29.8989C69.9783 30.0474 69.9783 30.7026 69.5151 30.8511L49.4849 37.2739C49.0217 37.4224 49.0217 38.0776 49.4849 38.2261L69.5151 44.6489C69.9782 44.7974 69.9782 45.4526 69.5151 45.6011L49.4849 52.0239C49.0217 52.1724 49.0217 52.8276 49.4849 52.9761L69.5151 59.3989C69.9783 59.5474 69.9783 60.2026 69.5151 60.3511L49.4849 66.7739C49.0217 66.9224 49.0217 67.5776 49.4849 67.7261L69.5151 74.1489C69.9783 74.2974 69.9783 74.9526 69.5151 75.1011L48 82" FillRule="NonZero"/>
+          </Path.Data>
+        </Path>
+        <Labels:WaterLevel x:Name="WaterLevel" Background="Transparent" d:Background="lightblue" Height="109" Width="84" 
+                         HorizontalAlignment="Left" VerticalAlignment="Top" 
+                           Canvas.Left="4" Canvas.Top="7" d:Opacity=".6">
+          <Labels:WaterLevel.OpacityMask>
+            <VisualBrush Visual="{Binding ElementName=rect4}" />
+          </Labels:WaterLevel.OpacityMask>
+        </Labels:WaterLevel>
+        <Canvas Name="g8" Effect="{StaticResource MaterialDesignElevationShadow1}" d:IsLocked="True">
+          <Path x:Name="path6" StrokeThickness="3.44549" Stroke="#FF808080" StrokeStartLineCap="Round" StrokeEndLineCap="Round">
+            <Path.Data>
+              <PathGeometry Figures="M18 6C13.6542 6 9.49209 6.02491 9.21201 6.02662C9.20131 6.02668 9.19144 6.02671 9.18075 6.02672C5.12023 6.03201 3 8.01803 3 10.5V112.5C3 114.985 6.3003 117 10.3714 117H81.6286C85.6997 117 89 114.985 89 112.5V10.5C89 8.01472 85.6997 6 81.6286 6H74" FillRule="NonZero"/>
+            </Path.Data>
+          </Path>
+        </Canvas>
+      </Canvas>
+    </Canvas>
+  </Viewbox>
 </UserControl>
