V3001: Improve OverallView, add water levels

--- a/Prevu.Synoptics.V3001-COVERIS/P350.xaml
+++ b/Prevu.Synoptics.V3001-COVERIS/P350.xaml
@@ -391,7 +391,7 @@
         </TransformGroup>
       </Machines:DCE_DryingCentrifuge.RenderTransform>
     </Machines:DCE_DryingCentrifuge>
-    <Machines:VRC_WaterCollectingTank HorizontalAlignment="Left" Margin="601,668,0,0" VerticalAlignment="Top" Height="130" Width="304"/>
+    <Machines:VRC_WaterCollectingTank HorizontalAlignment="Left" Margin="601,668,0,0" VerticalAlignment="Top" Height="130" Width="304" ComponentName="370-41-LT1" TrendName="LEVEL"/>
     <Machines:VB_VibratingScreen HorizontalAlignment="Left" Margin="891,419,0,0" VerticalAlignment="Top"/>
     <Machines:WaterPump HorizontalAlignment="Left" Margin="1044,650,0,0" VerticalAlignment="Top" Height="70" Width="50" RenderTransformOrigin="0.5,0.5" Color="Water">
       <Machines:WaterPump.RenderTransform>
