--- a/Prevu.Synoptics.V3001-Coveris/WaterView.xaml
+++ b/Prevu.Synoptics.V3001-Coveris/WaterView.xaml
@@ -546,7 +546,7 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Machines:VRC_WaterCollectingTank Height="68" Width="118" HorizontalAlignment="Center" Canvas.Left="625" Canvas.Top="327" VerticalAlignment="Top"/>
+    <Machines:VRC_WaterCollectingTank Height="68" Width="118" HorizontalAlignment="Center" Canvas.Left="625" Canvas.Top="327" VerticalAlignment="Top" ComponentName="370-41-LT1" TrendName="LEVEL"/>
     <Machines:VB_VibratingScreen Canvas.Left="763" Canvas.Top="233" Height="64" Width="57" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Machines:CV_Valve_001 Height="45" Width="44" Color="Water" RenderTransformOrigin="0.51,0.539" HorizontalAlignment="Left" Canvas.Left="1579" Canvas.Top="658" VerticalAlignment="Center">
       <Machines:CV_Valve_001.RenderTransform>
@@ -577,7 +577,7 @@
         </TransformGroup>
       </Machines:WaterPump.RenderTransform>
     </Machines:WaterPump>
-    <Machines:VRC_WaterCollectingTank Height="55" Width="95" Canvas.Left="1453" Canvas.Top="675" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Machines:VRC_WaterCollectingTank Height="55" Width="95" Canvas.Left="1453" Canvas.Top="675" HorizontalAlignment="Left" VerticalAlignment="Center" TrendName="LEVEL" ComponentName="470-41-LT1"/>
     <Machines:VB_VibratingScreen Canvas.Left="1373" Canvas.Top="591" Height="64" Width="57" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Machines:WaterPump Height="21" Width="23" RenderTransformOrigin="0.5,0.5" Color="Water" Canvas.Left="1407" Canvas.Top="701" HorizontalAlignment="Left" VerticalAlignment="Center">
       <Machines:WaterPump.RenderTransform>
@@ -601,7 +601,7 @@
         </TransformGroup>
       </Machines:CV_Valve_001.RenderTransform>
     </Machines:CV_Valve_001>
-    <Machines:VRC_WaterCollectingTank Height="55" Width="95" Canvas.Left="493" Canvas.Top="692" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Machines:VRC_WaterCollectingTank Height="55" Width="95" Canvas.Left="493" Canvas.Top="692" HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="500-41-LT1" TrendName="LEVEL"/>
     <Machines:VB_VibratingScreen Canvas.Left="608" Canvas.Top="610" Height="62" Width="55" HorizontalAlignment="Left" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5">
       <Machines:VB_VibratingScreen.RenderTransform>
         <TransformGroup>
@@ -640,8 +640,8 @@
         </TransformGroup>
       </Machines:DCE_DryingCentrifuge.RenderTransform>
     </Machines:DCE_DryingCentrifuge>
-    <Machines:STR_BatchReactor Height="87" Width="40" Canvas.Left="624" Canvas.Top="86" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-    <Machines:STR_BatchReactor Height="87" Width="40" Canvas.Left="608" Canvas.Top="107" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Machines:STR_BatchReactor Height="87" Width="40" Canvas.Left="624" Canvas.Top="86" HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="335-41-LT1" TrendName="LEVEL"/>
+    <Machines:STR_BatchReactor Height="87" Width="40" Canvas.Left="608" Canvas.Top="107" HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="330-41-LT1" TrendName="LEVEL"/>
     <Machines:DCE_DryingCentrifuge Height="141" Width="111" RenderTransformOrigin="0.5,0.5" Canvas.Left="1319" Canvas.Top="223" HorizontalAlignment="Left" VerticalAlignment="Center">
       <Machines:DCE_DryingCentrifuge.RenderTransform>
         <TransformGroup>
