--- a/Prevu.Synoptics.V3001-COVERIS/P230.xaml
+++ b/Prevu.Synoptics.V3001-COVERIS/P230.xaml
@@ -25,7 +25,7 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Rectangle HorizontalAlignment="Left" Height="152" Margin="1232,342,0,0" Stroke="White" StrokeThickness="2" VerticalAlignment="Top" Width="118" RadiusX="15" RadiusY="15" d:IsLocked="True" Grid.Row="1"/>
+    <Rectangle HorizontalAlignment="Left" Height="152" Margin="1206,184,0,0" Stroke="White" StrokeThickness="2" VerticalAlignment="Top" Width="118" RadiusX="15" RadiusY="15" Grid.RowSpan="2"/>
     <Labels:Pipe HorizontalAlignment="Left" Margin="509,91,0,0" VerticalAlignment="Top" Color="Water" Width="56" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="212-22-CV1" Grid.Row="1">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
@@ -302,9 +302,9 @@
         </TransformGroup>
       </Machines:SCW_ScrewConveyor_straight.RenderTransform>
     </Machines:SCW_ScrewConveyor_straight>
-    <TextBlock HorizontalAlignment="Left" Margin="1244,353,0,0" TextWrapping="Wrap" 
+    <TextBlock HorizontalAlignment="Left" Margin="1218,195,0,0" TextWrapping="Wrap" 
             VerticalAlignment="Top" Height="55" Width="94" TextAlignment="Center" 
-            FontSize="20" Foreground="White" Grid.Row="1"><Run Text="External"/><LineBreak/><Run Text="Interface"/></TextBlock>
+            FontSize="20" Foreground="White"><Run Text="External"/><LineBreak/><Run Text="Interface"/></TextBlock>
     <Labels:DeviceLabel HorizontalAlignment="Left" 
                         Margin="146,50,0,0" 
                         VerticalAlignment="Top" 
@@ -374,7 +374,7 @@
 		Margin="479,305,0,0" 
 		VerticalAlignment="Top" 
 		ComponentName="230-01-YA1" Grid.Row="1"/>
-    <Labels:DetailsLabel Margin="1260,418,98,80" ComponentName="099-71-EXT" DetailsPageName="D099" Grid.Row="1"/>
+    <Labels:DetailsLabel Margin="1234,260,124,523" ComponentName="099-71-EXT" DetailsPageName="D099" Grid.RowSpan="2"/>
     <Labels:JumpLabel HorizontalAlignment="Left" 
             Margin="1056,343,0,0" 
             VerticalAlignment="Top" 
