--- a/Prevu.Synoptics.V3001-COVERIS/P460.xaml
+++ b/Prevu.Synoptics.V3001-COVERIS/P460.xaml
@@ -230,7 +230,7 @@
 				</TransformGroup>
 			</Labels:Pipe.RenderTransform>
 		</Labels:Pipe>
-		<Machines:VRC_WaterCollectingTank HorizontalAlignment="Left" Margin="426,652,0,0" VerticalAlignment="Top" Height="93" Width="237"/>
+		<Machines:VRC_WaterCollectingTank HorizontalAlignment="Left" Margin="426,652,0,0" VerticalAlignment="Top" Height="93" Width="237" ComponentName="470-41-LT1" TrendName="LEVEL"/>
 		<Machines:SCW_ScrewConveyor_straight HorizontalAlignment="Left" Margin="939,311,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Width="104" Height="23">
 			<Machines:SCW_ScrewConveyor_straight.RenderTransform>
 				<TransformGroup>
