--- a/Prevu.Synoptics.V3001-COVERIS/P490.xaml
+++ b/Prevu.Synoptics.V3001-COVERIS/P490.xaml
@@ -210,7 +210,7 @@
     </Machines:SCW_ScrewConveyor_straight>
     <Machines:STR_Washing_reactor_B HorizontalAlignment="Left" Margin="258,79,0,0" VerticalAlignment="Top" Height="218" Width="142"/>
     <Machines:STR_Washing_reactor_B HorizontalAlignment="Left" Margin="381,79,0,0" VerticalAlignment="Top" Height="218" Width="142"/>
-    <Machines:VRC_WaterCollectingTank HorizontalAlignment="Left" Margin="426,652,0,0" VerticalAlignment="Top" Height="93" Width="237"/>
+    <Machines:VRC_WaterCollectingTank HorizontalAlignment="Left" Margin="426,652,0,0" VerticalAlignment="Top" Height="93" Width="237" ComponentName="500-41-LT1" TrendName="LEVEL"/>
     <Machines:DCE_DryingCentrifuge HorizontalAlignment="Left" Margin="708,139,0,0" VerticalAlignment="Top" Height="140" Width="102" RenderTransformOrigin="0.5,0.5">
       <Machines:DCE_DryingCentrifuge.RenderTransform>
         <TransformGroup>
